--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
-.container {	
-	margin-top: 50px;
+.container-flex {	
+	margin: 50px auto;
+	width: 750px;
 	height: 549px;
 }
 
@@ -10,6 +11,7 @@
     background-size: 80px 60px;
 	background-repeat: repeat;
 	height: 82%;
+	width: 100%;
 	padding: 1px;
 	border: 5px solid #2C1910;
 	border-radius: 5px;
@@ -63,23 +65,23 @@
 }
 
 .ball5 {
-	bottom: 95px;
+	bottom: 96px;
 }
 
 .ball4 {
-	bottom: 184px;
+	bottom: 192px;
 }
 
 .ball3 {
-	bottom: 203px;
+	bottom: 212px;
 }
 
 .ball2 {
-	bottom: 222px;
+	bottom: 232px;
 }
 
 .ball1 {
-	bottom: 241px;
+	bottom: 252px;
 }
 
 /*------- console layout -------*/
