--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,14 @@
 
 .container-flex {	
 	margin: 50px auto;
-	width: 750px;
+	width: 815px;
 	height: 549px;
+}
+
+#abacus{
+	width: 100%;
+	height: 82%;
+	margin-bottom: 10px;
 }
 
 /*----- Abacus layout ------*/
@@ -19,8 +25,8 @@
 	background-image: url("../img/wood.jpg");
     background-size: 80px 60px;
 	background-repeat: repeat;
-	height: 82%;
-	width: 100%;
+	height: 100%;
+	width: 92%;
 	padding: 1px;
 	border: 5px solid #2C1910;
 	border-radius: 5px;
@@ -68,6 +74,10 @@
 	z-index: -1;
 }
 
+#framework {
+	float: left;
+}
+
 #framework img {
 	position: relative;		
 	width: 100%;
@@ -94,39 +104,40 @@
 	bottom: 252px;
 }
 
-/*------- console layout -------*/
+/*------- operators and display layout -------*/
 
-#console {
-	height: 80px;
+
+#operators {	
+	float: left;	
+	width: 8%;
+	height: 90%;
+	margin-top: 45px;
+	padding-left: 5px;	
 }
 
-#operands {	
-	float: left;	
-	width: 68%;
-	height: 100%;		
+.operator-button {	
+	display: block;		
+	cursor: pointer;
+	width: 100%;
 }
 
 #display {	
-	float: left;	
+	
 	background-image: url("../img/blackboard.jpg");
     background-size: 80px 40px;	
     border: 2px solid #2C1910;
 	border-radius: 5px;	
-	width: 32%;
-	height: 75%;
-	margin: 10px 0;			
+	width: 100%;
+	height: 60px;
+			
 }
 
 #display p {	
 	color: #CCC;	
-	font-size: 2.8em;	
+	font-size: 3em;	
 	text-align: center;
 	
 }
 
-.operands-buttons {		
-	padding: 11px 10px;	
-	cursor: pointer;
-	width: 16%;
-}
+
 
