--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,22 @@
 	font-family: PWChalk;	
 }
 
+body {	
+	background-image: url("../img/background.jpg");	
+	z-index: -1;
+}
+
+#tittle {
+  font-family: "pacifico", cursive;
+  color: #dda500;
+  text-align: center;
+  font-size: 2.5em;
+  font-weight: bold;
+  text-shadow: 3px 3px 0px rgba(0,0,0,0.1), 7px 7px 0px rgba(0,0,0,0.05);
+}
+
 .container-flex {	
-	margin: 50px auto;
+	margin: 20px auto;
 	width: 815px;
 	height: 549px;
 }
@@ -82,6 +96,7 @@
 	position: relative;		
 	width: 100%;
 	cursor: pointer;
+	disabl
 }
 
 .ball5 {
@@ -121,22 +136,52 @@
 	width: 100%;
 }
 
-#display {	
-	
+#divide{
+	-moz-transform: rotate(45deg);
+	-o-transform: rotate(45deg);
+	-webkit-transform: rotate(45deg);
+	transform: rotate(45deg) ;
+}
+
+#display {		
 	background-image: url("../img/blackboard.jpg");
     background-size: 80px 40px;	
     border: 2px solid #2C1910;
 	border-radius: 5px;	
 	width: 100%;
-	height: 60px;
-			
+	height: 50px;			
 }
 
 #display p {	
 	color: #CCC;	
-	font-size: 3em;	
+	font-size: 2.6em;	
+	text-align: center;	
+}
+
+footer {
+	font-family: "pacifico", cursive;
+  	color: #ffa500;
 	text-align: center;
-	
+	margin-top: 15px;	
+}
+
+footer a {
+	font-family: "pacifico", cursive;
+  	color: #00aa00;
+	text-decoration: none;	
+	font-style: italic;
+}
+
+#copyleft {
+	display: inline-block;
+	text-align: right;
+	margin: 0px;
+	-moz-transform: scaleX(-1);
+	-o-transform: scaleX(-1);
+	-webkit-transform: scaleX(-1);
+	transform: scaleX(-1);
+	filter: FlipH;
+	-ms-filter: "FlipH";
 }
 
 
